--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             width="364"
             height="58"
         /></a>
-        <div class="search-view" data-search-view>
+        <div class="search-view" data-search-view>    <!-- Active -->
           <div class="search-wrapper">
             <input
               type="search"
@@ -60,7 +60,7 @@
             </button>
           </div>
 
-          <div class="search-result" data-search-result>
+          <div class="search-result active" data-search-result>
             <ul class="view-list" data-search-list>
               <li class="view-item">
                 <span class="n-icon">location_on</span>
